Fix bug with progress spinner ( spinner was also blurred )

--- a/biograph-frontend/src/app/app.component.less
+++ b/biograph-frontend/src/app/app.component.less
@@ -4,3 +4,18 @@
 .blurred {
   filter: blur(3px);
 }
+
+.progress-bar {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100vw;
+  filter: blur(0px);
+}
+
+.progress-spinner {
+  position: fixed;
+  top: 49vh;
+  left: 49vw;
+  filter: blur(0px);
+}
