--- a/biograph-frontend/src/app/components/main-nav/main-nav.component.less
+++ b/biograph-frontend/src/app/components/main-nav/main-nav.component.less
@@ -29,15 +29,3 @@
   width: 90vw;
 }
 
-.progress-bar {
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  width: 100vw;
-}
-
-.progress-spinner {
-  position: fixed;
-  top: 49vh;
-  left: 49vw;
-}
