--- a/biograph-frontend/src/app/components/statistic-page/metrics-monitoring/metrics-monitoring.component.less
+++ b/biograph-frontend/src/app/components/statistic-page/metrics-monitoring/metrics-monitoring.component.less
@@ -37,8 +37,8 @@
           display: flex;
           flex-flow: column nowrap;
           justify-content: center;
-          align-items: start;
-          align-content: start;
+          align-items: flex-start;
+          align-content: flex-start;
         }
       }
     }
